# messaging_app_django

./: .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: models.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_mailing_owner_recipient_owner_and_more.py  0003_alter_mailing_first_sending.py  0004_alter_mailing_options.py  0005_message_owner.py
mailing/templates/mailing/: mailing_detail.html  mailing_report.html  main_page.html  recipient_detail.html
mailing/templates/mailing/includes/: inc_menu.html
users/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_avatar_user_country_user_phone_number.py  0004_alter_user_options.py
users/templates/users/: user_detail.html
